; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ide/extr_sgiioc4.c_sgiioc4_resetproc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ide/extr_sgiioc4.c_sgiioc4_resetproc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_7__* }
%struct.TYPE_7__ = type { %struct.ide_cmd }
%struct.ide_cmd = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_8__*)* @sgiioc4_resetproc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sgiioc4_resetproc(%struct.TYPE_8__* %0) #0 {
  %2 = alloca %struct.TYPE_8__*, align 8
  %3 = alloca %struct.ide_cmd*, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %2, align 8
  %4 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 0
  %6 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 0
  store %struct.ide_cmd* %7, %struct.ide_cmd** %3, align 8
  %8 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %9 = call i32 @sgiioc4_dma_end(%struct.TYPE_8__* %8)
  %10 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %11 = load %struct.ide_cmd*, %struct.ide_cmd** %3, align 8
  %12 = call i32 @ide_dma_unmap_sg(%struct.TYPE_8__* %10, %struct.ide_cmd* %11)
  %13 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %14 = call i32 @sgiioc4_clearirq(%struct.TYPE_8__* %13)
  ret void
}

declare dso_local i32 @sgiioc4_dma_end(%struct.TYPE_8__*) #1

declare dso_local i32 @ide_dma_unmap_sg(%struct.TYPE_8__*, %struct.ide_cmd*) #1

declare dso_local i32 @sgiioc4_clearirq(%struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
